--- a/res/layout/activity_advnfc.xml
+++ b/res/layout/activity_advnfc.xml
@@ -10,19 +10,28 @@
     tools:context=".AdvNFC" >
 
     <Button
-        android:id="@+id/initbtn"
+        android:id="@+id/loadKeyBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="initNFC" />
+        android:text="LoadKey" />
 
     <Button
-        android:id="@+id/scanbtn"
+        android:id="@+id/readDataBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/button1"
-        android:text="scanNFC" />
+        android:layout_toRightOf="@+id/loadKeyBtn"
+        android:text="ReadData" />
+    
+    
+    <Button
+        android:id="@+id/connectBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/readBtn"
+        android:text="Connect to BLT" />
 
 </LinearLayout>
